# starnavi-testtask

./: Dockerfile  alembic.ini  bot-conf.toml  bot.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
social_network/: app.py  middlewares.py
social_network/api/: post.py  user.py
social_network/api/dependencies/: db.py  services.py
social_network/conf/: db.py  settings.py
social_network/migrations/: env.py
social_network/migrations/versions/: 2023_11_27_1844-a77382494e90_initial.py  2023_11_28_0147-ae23cc5b0bb9_added_date_tracking_columns.py
social_network/models/: __init__.py  post.py  user.py
social_network/schemas/: post.py  user.py
social_network/services/: base.py  like.py  post.py
social_network/users/: __init__.py  backend.py  manager.py
