[tool.poetry]
name = "starnavi-testtask"
version = "0.1.0"
description = ""
authors = ["Gipssik <gissa.dmtr@gmail.com>"]
readme = "README.md"
packages = [{include = "starnavi_testtask"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
